FileManager - The toolbar items don't have tooltips (T896064)

--- a/js/localization/messages/de.json
+++ b/js/localization/messages/de.json
@@ -287,6 +287,7 @@
         "dxFileManager-commandThumbnails": "Miniaturansicht",
         "dxFileManager-commandDetails": "Detailansicht",
         "dxFileManager-commandClearSelection": "Auswahl aufheben",
+        "dxFileManager-commandShowNavPane": "TODO",
 
         "dxFileManager-dialogDirectoryChooserMoveTitle": "Verschieben nach",
         "dxFileManager-dialogDirectoryChooserMoveButtonText": "Verschieben",
